--- a/Database/app/src/main/AndroidManifest.xml
+++ b/Database/app/src/main/AndroidManifest.xml
@@ -9,8 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
         <activity
             android:name=".UserActivity"
             android:label="@string/title_activity_user"
@@ -28,14 +23,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.shakkhor.database.LoginActivity" />
+
             <intent-filter>
                 <action android:name="com.example.shakkhor.database.UserActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-
+        <activity android:name=".DrugByClassActivity"></activity>
     </application>
 
 </manifest>
